adds update handlers swagger
