# back-end/docs/swagger.json
@@ -152,6 +152,80 @@
         }
       }
     },
+    "/student/{studentId}": {
+      "put": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http",
+          "https"
+        ],
+        "summary": "It updates a User",
+        "operationId": "updateStudent",
+        "parameters": [
+          {
+            "name": "Student",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "required": [
+                "username",
+                "password",
+                "first_name",
+                "last_name",
+                "email",
+                "birth_date",
+                "phone_number",
+                "photo",
+                "registration_number"
+              ],
+              "properties": {
+                "birth_date": {
+                  "type": "string",
+                  "x-go-name": "BirthDate"
+                },
+                "email": {
+                  "type": "string",
+                  "x-go-name": "Email"
+                },
+                "first_name": {
+                  "type": "string",
+                  "x-go-name": "FirstName"
+                },
+                "last_name": {
+                  "type": "string",
+                  "x-go-name": "LastName"
+                },
+                "password": {
+                  "type": "string",
+                  "x-go-name": "Password"
+                },
+                "phone_number": {
+                  "type": "string",
+                  "x-go-name": "PhoneNumber"
+                },
+                "photo": {
+                  "type": "string",
+                  "x-go-name": "Photo"
+                },
+                "registration_number": {
+                  "type": "string",
+                  "x-go-name": "RegistrationNumber"
+                },
+                "username": {
+                  "type": "string",
+                  "x-go-name": "Username"
+                }
+              }
+            }
+          }
+        ]
+      }
+    },
     "/tutor": {
       "post": {
         "consumes": [
@@ -245,6 +319,80 @@
           }
         }
       }
+    },
+    "/tutor/{tutorId}": {
+      "put": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http",
+          "https"
+        ],
+        "summary": "It updates a User",
+        "operationId": "updateTutor",
+        "parameters": [
+          {
+            "name": "Tutor",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "required": [
+                "username",
+                "password",
+                "first_name",
+                "last_name",
+                "email",
+                "birth_date",
+                "phone_number",
+                "photo",
+                "academic_rank"
+              ],
+              "properties": {
+                "academic_rank": {
+                  "type": "string",
+                  "x-go-name": "AcademicRank"
+                },
+                "birth_date": {
+                  "type": "string",
+                  "x-go-name": "BirthDate"
+                },
+                "email": {
+                  "type": "string",
+                  "x-go-name": "Email"
+                },
+                "first_name": {
+                  "type": "string",
+                  "x-go-name": "FirstName"
+                },
+                "last_name": {
+                  "type": "string",
+                  "x-go-name": "LastName"
+                },
+                "password": {
+                  "type": "string",
+                  "x-go-name": "Password"
+                },
+                "phone_number": {
+                  "type": "string",
+                  "x-go-name": "PhoneNumber"
+                },
+                "photo": {
+                  "type": "string",
+                  "x-go-name": "Photo"
+                },
+                "username": {
+                  "type": "string",
+                  "x-go-name": "Username"
+                }
+              }
+            }
+          }
+        ]
+      }
     }
   },
   "definitions": {
@@ -304,6 +452,29 @@
         }
       },
       "x-go-package": "github.com/loukaspe/nursing-academiq/internal/handlers"
+    },
+    "UpdateStudentResponse": {
+      "description": "Response when we update Student",
+      "type": "object",
+      "properties": {
+        "errorMessage": {
+          "description": "possible error message",
+          "type": "string",
+          "x-go-name": "ErrorMessage"
+        }
+      },
+      "x-go-package": "github.com/loukaspe/nursing-academiq/internal/handlers/student"
+    },
+    "UpdateTutorResponse": {
+      "description": "Response when we update Tutor",
+      "type": "object",
+      "properties": {
+        "errorMessage": {
+          "type": "string",
+          "x-go-name": "ErrorMessage"
+        }
+      },
+      "x-go-package": "github.com/loukaspe/nursing-academiq/internal/handlers/tutor"
     }
   }
 }
