# back-end/internal/handlers/tutor/updateHandler.go
@@ -1,6 +1,7 @@
 package tutor
 
 import (
+	"context"
 	"encoding/json"
 	"github.com/gorilla/mux"
 	"github.com/loukaspe/nursing-academiq/internal/core/domain"
@@ -11,6 +12,8 @@ import (
 	"strconv"
 	"time"
 )
+
+//TODO: test if sql injection
 
 type UpdateTutorHandler struct {
 	TutorService *services.TutorService
@@ -27,18 +30,54 @@ func NewUpdateTutorHandler(
 	}
 }
 
+// Response when we update Tutor
+// swagger:model UpdateTutorResponse
 type UpdateTutorResponse struct {
 	ErrorMessage string `json:"errorMessage,omitempty"`
 }
 
+// swagger:operation PUT /tutor/{tutorId} updateTutor
+//
+// # It updates a User
+//
+// ---
+//
+//	Consumes:
+//	- application/json
+//
+//	Produces:
+//	- application/json
+//
+//	Schemes:
+//	- http
+//	- https
+//
+// responses:
+//
+//	"200":
+//		description: Tutor updates successfully
+//		schema:
+//			$ref: "#/definitions/UpdateTutorResponse"
+//	"400":
+//		description: Bad request - request parameters are missing or invalid
+//		schema:
+//			$ref: "#/definitions/UpdateTutorResponse"
+//	"404":
+//		description: Requested Tutor not found
+//		schema:
+//			$ref: "#/definitions/UpdateTutorResponse"
+//	"500":
+//		description: Internal server error - check logs for details
+//		schema:
+//			$ref: "#/definitions/UpdateTutorResponse"
 func (handler *UpdateTutorHandler) UpdateTutorController(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 
 	response := &UpdateTutorResponse{}
 
-	tutorRequest := &Tutor{}
+	request := &TutorRequest{}
 
-	err := json.NewDecoder(r.Body).Decode(tutorRequest)
+	err := json.NewDecoder(r.Body).Decode(request)
 	if err != nil {
 		handler.logger.WithFields(log.Fields{
 			"errorMessage": err.Error(),
@@ -49,6 +88,8 @@ func (handler *UpdateTutorHandler) UpdateTutorController(w http.ResponseWriter, 
 		json.NewEncoder(w).Encode(response)
 		return
 	}
+
+	tutorRequest := request.Tutor
 
 	id := mux.Vars(r)["id"]
 	if id == "" {
@@ -93,7 +134,7 @@ func (handler *UpdateTutorHandler) UpdateTutorController(w http.ResponseWriter, 
 		AcademicRank: tutorRequest.AcademicRank,
 	}
 
-	err = handler.TutorService.UpdateTutor(uint32(uid), domainTutor)
+	err = handler.TutorService.UpdateTutor(context.TODO(), uint32(uid), domainTutor)
 	if dataNotFoundErrorWrapper, ok := err.(*apierrors.DataNotFoundErrorWrapper); ok {
 		handler.logger.WithFields(log.Fields{
 			"errorMessage": dataNotFoundErrorWrapper.Unwrap().Error(),
